# my-llm-base-python-project-template

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  pr-labeler.yml
docs/: docstring_ja_style.md  github-branch-protection.md  github-development-basics.md  label-taxonomy.md  mypy-pytest-check-guidelines.md  notebook-policy.md  python-tooling-operations-guide.md  release-tag-governance.md  requirements.md  reviewer-friendly-pr-rules.md  skills.md  specification.md  team-rules.md  vscode-jupyter-environment-setup.md  vscode-library-recommendations.md
docs/llm-context/: README.md
notebooks/: template.ipynb
src/mlops_template/: __init__.py  cli.py  logging_utils.py  repro.py
tasks/: lessons.md  todo.md
tests/: test_cli.py  test_repro.py
