[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "mlops-template"
version = "0.1.0"
description = "LLM協調開発を前提としたMLOps向けPythonテンプレート"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0",
  "pre-commit>=3.8.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.9",
]

[project.scripts]
mlops-template = "mlops_template.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mlops_template"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "SIM", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=src --cov-report=term-missing --cov-fail-under=80"
